# filer-app

./: .gitignore  LICENSE  MANUAL.md  README.md
.github/workflows/: release.yml
docs/: ROADMAP.md  wechat-article.md
screenshots/: screenshot.cjs
screenshots/mock/: inbox.html  stats.html
scripts/: make_icon.py
src-tauri/: Cargo.toml  filer-updater.key.pub  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/nsis/: hooks.nsi
src-tauri/src/: analyze.rs  commands.rs  config.rs  defaults.toml  filer.rs  lib.rs  main.rs  pathutil.rs  pdfinfo.rs  rules.rs  store.rs  timeutil.rs  watcher.rs
ui/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
ui/src/: App.tsx  api.ts  types.ts
ui/src/components/: History.tsx  Inbox.tsx  Review.tsx  ReviewModal.tsx  RulesEditor.tsx  Search.tsx  SettingsModal.tsx  Stats.tsx
