[package]
name = "filer"
version = "0.1.0"
description = "filer — watch a download dir, auto-suggest metadata, organize files into structured folders"
edition = "2021"
license = "MIT"

[lib]
name = "filer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-autostart = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "sync", "time"] }
sha2 = "0.10"
toml = "0.8"
anyhow = "1"
thiserror = "1"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
rusqlite = { version = "0.32", features = ["bundled"] }
notify = "7"
lopdf = "0.43.0"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "webp", "bmp"] }
kamadak-exif = "0.6"
zip = "2"
open = "5.3.6"

[dev-dependencies]
tempfile = "3"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
